--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 REDDIT_CLIENT_ID=your_reddit_client_id_here
 REDDIT_CLIENT_SECRET=your_reddit_client_secret_here
 GEMINI_API_KEY=your_gemini_api_key_here
+REDDIT_USER_AGENT=your_user_agent_here
